# libAdvatek

./: .gitignore  CMakeLists.txt  LibAdvatek.sln  README.md
LibAdvatek/: LibAdvatek.vcxproj  LibAdvatek.vcxproj.filters
include/: LockedQueue.h  advatek_assistor.h  advatek_manager.h  defines.h  udpclient.h
includes/: LockedQueue.h
source/: SAdvatekDevice.cpp  SAdvatekDevice.h  UdpBoost.inl  UdpRaw.inl  advatek_assistor.cpp  advatek_manager.cpp  defines.cpp  udpclient.cpp
